changed comment style in template

--- a/template.html
+++ b/template.html
@@ -25,7 +25,7 @@
     <!-- Start your jsxgraph here -->
     <script>
         
-        var board = JXG.JSXGraph.initBoard('jxgbox', { // STACK: when moving to STACK change 'jxgboard' for divid
+        var board = JXG.JSXGraph.initBoard('jxgbox', { /* STACK: when moving to STACK change 'jxgboard' for divid*/
             boundingbox: [-1, 7, 9, -1],
             keepaspectratio: true,
             showCopyright: false,
