--- a/template.html
+++ b/template.html
@@ -21,11 +21,10 @@
     <div id="jxgbox" class="jxgbox" style="width:600px; height:600px;">
     </div>
 
-
     <!-- Start your jsxgraph here -->
     <script>
         
-        var board = JXG.JSXGraph.initBoard('jxgbox', { /* STACK: when moving to STACK change 'jxgboard' for divid*/
+        var board = JXG.JSXGraph.initBoard('jxgbox', { /* STACK: when moving to STACK change 'jxgbox' for divid*/
             boundingbox: [-1, 7, 9, -1],
             keepaspectratio: true,
             showCopyright: false,
